--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -27,7 +27,7 @@ jobs:
           context: .
           file: Dockerfile.prod
           push: true
-          tags: ${{ vars.DOCKERHUB_USERNAME }}/python-crud-prod:latest
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/python-crud:latest
 
       - name: Deploy to on server
         uses: appleboy/ssh-action@v1
@@ -40,15 +40,15 @@ jobs:
             podman login -u ${{ vars.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }} docker.io
 
             # Stop and remove existing container if it exists
-            podman stop python-crud-prod || true
-            podman rm python-crud-prod || true
+            podman stop python-crud || true
+            podman rm python-crud || true
 
             # Remove existing image if it exists
-            podman rmi ${{ vars.DOCKERHUB_USERNAME }}/python-crud-prod:latest || true
+            podman rmi ${{ vars.DOCKERHUB_USERNAME }}/python-crud:latest || true
 
             # Pull new image from Docker Hub
-            podman pull ${{ vars.DOCKERHUB_USERNAME }}/python-crud-prod:latest
+            podman pull ${{ vars.DOCKERHUB_USERNAME }}/python-crud:latest
 
             # Run new container
-            podman run -d --name python-crud-prod --network host ${{ vars.DOCKERHUB_USERNAME }}/python-crud-prod:latest
+            podman run -d --name python-crud --network host ${{ vars.DOCKERHUB_USERNAME }}/python-crud:latest
             echo "Container has been deployed successfully!"
