--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,11 +1,12 @@
-name: Developing
+name: Developing and Deploying
 
 on:
   push:
-    branches: [ "dev" ]
+    branches: [ "dev", "master" ]
 
 jobs:
-  test:
+  build-and-test:
+    if: github.ref == 'refs/heads/dev'
     runs-on: self-hosted
     services:
       postgres:
@@ -43,61 +44,29 @@ jobs:
         run: |
           docker run --rm --network=host ${{ vars.DOCKERHUB_USERNAME }}/test-python-crud:latest
 
-  push:
-    needs: test
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          ref: dev
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ vars.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Setup Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Build and push
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          push: true
-          file: ./Dockerfile.dev
-          tags: ${{ vars.DOCKERHUB_USERNAME }}/test-python-crud:latest
-
-name: Deploy
-
-on:
-  push:
-    branches: [ "master" ]
-
-jobs:
-  deploy:
+  push-and-deploy:
+    if: github.ref == 'refs/heads/master'
+    needs: build-and-test
     runs-on: self-hosted
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Build and push production image
         uses: docker/build-push-action@v3
         with:
           context: .
-          file: Dockerfile.prod
+          file: ./Dockerfile.prod
           push:true
           tags:${{ vars.DOCKERHUB_USERNAME }}/python-crud:${{ github.sha }}
 
@@ -118,7 +87,7 @@ jobs:
             # Remove existing image if it exists (optional)
             podman rmi ${{ vars.DOCKERHUB_USERNAME }}/python-crud:${{ github.sha }} || true
 
-            # Pull new image from Docker Hub (using latest tag or specific sha)
+            # Pull new image from Docker Hub (using sha tag)
             podman pull ${{ vars.DOCKERHUB_USERNAME }}/python-crud:${{ github.sha }}
 
             # Run new container with the pulled image (adjust as needed)
