--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -2,7 +2,7 @@ name: Developing and Deploying
 
 on:
   push:
-    branches: [ "dev", "master" ]
+    branches: [ "master" ]
 
 jobs:
   build-and-test:
@@ -66,30 +66,29 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          file: ./Dockerfile.prod
-          push:true
-          tags:${{ vars.DOCKERHUB_USERNAME }}/python-crud:${{ github.sha }}
-
-      - name：Deploy to server via SSH (Podman)
-        uses：appleboy/ssh-action@v1
-        with：
-          host：${{ secrets.SSH_HOST }}
-          port：${{ secrets.SSH_PORT }}
-          username：${{ secrets.SSH_USERNAME }}
-          key：${{ secrets.SSH_PRIVATE_KEY }}
-          script： |
+          file: Dockerfile.prod
+          push: true
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/python-crud:latest
+      - name: Deploy to on server
+        uses: appleboy/ssh-action@v1
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          port: ${{ secrets.SSH_PORT }}
+          username: ${{ secrets.SSH_USERNAME }} 
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
             podman login -u ${{ vars.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }} docker.io
 
             # Stop and remove existing container if it exists
             podman stop python-crud || true
             podman rm python-crud || true
 
-            # Remove existing image if it exists (optional)
-            podman rmi ${{ vars.DOCKERHUB_USERNAME }}/python-crud:${{ github.sha }} || true
+            # Remove existing image if it exists
+            podman rmi ${{ vars.DOCKERHUB_USERNAME }}/python-crud:latest || true
 
-            # Pull new image from Docker Hub (using sha tag)
-            podman pull ${{ vars.DOCKERHUB_USERNAME }}/python-crud:${{ github.sha }}
+            # Pull new image from Docker Hub
+            podman pull ${{ vars.DOCKERHUB_USERNAME }}/python-crud:latest
 
-            # Run new container with the pulled image (adjust as needed)
-            podman run -d --name python-crud --network host ${{ vars.DOCKERHUB_USERNAME }}/python-crud:${{ github.sha }}
+            # Run new container
+            podman run -d --name python-crud --network host ${{ vars.DOCKERHUB_USERNAME }}/python-crud:latest
             echo "Container has been deployed successfully!"
