--- a/.github/workflows/develop.yaml
+++ b/.github/workflows/develop.yaml
@@ -1,11 +1,12 @@
-name: Developing
+name: CI/CD Pipeline
 
 on:
   push:
     branches: [ "dev" ]
+  workflow_dispatch:
 
 jobs:
-  test:
+  build-and-test:
     runs-on: self-hosted
     services:
       postgres:
@@ -43,29 +44,91 @@ jobs:
         run: |
           docker run --rm --network=host ${{ vars.DOCKERHUB_USERNAME }}/test-python-crud:latest
 
-      - name: Push changes to master branch after successful tests
-        if: success()
-        uses: actions/github-script@v6
+  push-dev-image:
+    needs: build-and-test
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
         with:
+          ref: dev
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and push dev image
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          push: true
+          file: ./Dockerfile.dev
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/test-python-crud:latest
+
+  merge-to-master:
+    needs: push-dev-image
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          ref: master
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Merge dev into master
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git fetch origin dev:dev
+          git merge --no-ff dev -m "Merge dev into master by GitHub Actions"
+          git push origin master
+
+  deploy-prod:
+    needs: merge-to-master
+    runs-on: self-hosted
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          ref: master
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and push production image
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: Dockerfile.prod
+          push: true
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/python-crud:latest
+
+      - name: Deploy to server
+        uses: appleboy/ssh-action@v1
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          port: ${{ secrets.SSH_PORT }}
+          username: ${{ secrets.SSH_USERNAME }} 
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            const { GITHUB_TOKEN } = process.env;
-            const octokit = github.getOctokit(GITHUB_TOKEN);
-            const branchName = 'master';
-
-            // Fetch the latest master branch to ensure up-to-date base
-            await octokit.git.getRef({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              ref: `heads/${branchName}`,
-            });
-
-            // Ниже пример с использованием git команд через run:
-            const { execSync } = require('child_process');
-
-            // Переключиться на мастер и слить изменения из dev
-            execSync('git checkout master');
-            
-            // Запушить изменения в мастер
-            execSync('git push origin master');
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            podman login -u ${{ vars.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }} docker.io
+            podman stop python-crud || true
+            podman rm python-crud || true
+            podman rmi ${{ vars.DOCKERHUB_USERNAME }}/python-crud:latest || true
+            podman pull ${{ vars.DOCKERHUB_USERNAME }}/python-crud:latest
+            podman run -d --name python-crud --network host ${{ vars.DOCKERHUB_USERNAME }}/python-crud:latest
+            echo "Container has been deployed successfully!"
