--- a/.github/workflows/develop.yaml
+++ b/.github/workflows/develop.yaml
@@ -80,16 +80,27 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: master
+          fetch-depth: 0  # Важно: получаем полную историю
           token: ${{ secrets.GITHUB_TOKEN }}
-
+  
       - name: Merge dev into master
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git fetch origin dev:dev
-          git merge --no-ff dev -m "Merge dev into master by GitHub Actions"
+          
+          # Добавляем remote для dev ветки
+          git remote add dev-origin https://github.com/VasiliyQs/Python-crud.git
+          
+          # Получаем обе ветки полностью
+          git fetch origin --unshallow
+          git fetch dev-origin --unshallow
+          
+          # Пробуем мерж с разрешением несвязанных историй
+          git merge --allow-unrelated-histories dev-origin/dev -m "Merge dev into master by GitHub Actions"
+          
+          # Пушим изменения
           git push origin master
-
+          
   deploy-prod:
     needs: merge-to-master
     runs-on: self-hosted
