--- a/.github/workflows/develop.yaml
+++ b/.github/workflows/develop.yaml
@@ -104,7 +104,8 @@ jobs:
   
       - name: Push changes
         run: |
-          git push origin master
+            git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/VasiliyOs/Python-crud.git
+            git push origin master
           
   deploy-prod:
     needs: merge-to-master
