--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -1,35 +1,150 @@
-name: Test Push Workflow
+name: CI/CD Pipeline
 
 on:
-  # Триггер при ручном запуске через UI
-  workflow_dispatch:
-  # Триггер при push в любую ветку
   push:
-    branches: ['*']
+    branches: [ "dev" ]
+  workflow_dispatch:
 
 jobs:
-  test-push-job:
+  build-and-test:
+    runs-on: self-hosted
+    services:
+      postgres:
+        image: postgres:15-alpine
+        ports:
+          - "5432:5432"
+        env:
+          POSTGRES_DB: kubsu
+          POSTGRES_USER: kubsu
+          POSTGRES_PASSWORD: kubsu
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          ref: dev
+
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build container
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: ./Dockerfile.dev
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/test-python-crud:latest
+          load: true
+
+      - name: Run tests
+        run: |
+          docker run --rm --network=host ${{ vars.DOCKERHUB_USERNAME }}/test-python-crud:latest
+
+  push-dev-image:
+    needs: build-and-test
     runs-on: ubuntu-latest
-    
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          ref: dev
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and push dev image
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          push: true
+          file: ./Dockerfile.dev
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/test-python-crud:latest
+
+  merge-to-master:
+    needs: push-dev-image
+    runs-on: ubuntu-latest
+  
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          # Явно указываем токен
-          token: ${{ secrets.GITHUB_TOKEN }}
-          # Полная история коммитов
+          ref: master
           fetch-depth: 0
-
-      - name: Setup Git identity
+          token: ${{ secrets.GITHUB_TOKEN }}  # Используем GITHUB_TOKEN вместо личного токена
+  
+      - name: Configure Git
         run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-
-      - name: Create test commit
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+  
+      - name: Fetch dev branch
         run: |
-          echo "Test push at $(date)" >> test-push.txt
-          git add test-push.txt
-          git commit -m "Automated test commit [skip ci]"
-          
+          git fetch origin dev:dev
+  
+      - name: Merge dev into master
+        run: |
+          git merge dev --no-ff -m "Merge dev into master by GitHub Actions" || \
+          {
+            echo "Attempting merge with allow-unrelated-histories..."
+            git merge --allow-unrelated-histories dev -m "Merge dev into master by GitHub Actions"
+          }
+  
       - name: Push changes
-        run: git push origin HEAD:${{ github.ref }}
+        run: |
+          # Явно указываем URL с токеном для аутентификации
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
+          git push origin master
+          
+  deploy-prod:
+    needs: merge-to-master
+    runs-on: self-hosted
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          ref: master
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and push production image
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: Dockerfile.prod
+          push: true
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/python-crud:latest
+
+      - name: Deploy to server
+        uses: appleboy/ssh-action@v1
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          port: ${{ secrets.SSH_PORT }}
+          username: ${{ secrets.SSH_USERNAME }} 
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            podman login -u ${{ vars.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }} docker.io
+            podman stop python-crud || true
+            podman rm python-crud || true
+            podman rmi ${{ vars.DOCKERHUB_USERNAME }}/python-crud:latest || true
+            podman pull ${{ vars.DOCKERHUB_USERNAME }}/python-crud:latest
+            podman run -d --name python-crud --network host ${{ vars.DOCKERHUB_USERNAME }}/python-crud:latest
+            echo "Container has been deployed successfully!"
