--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -129,7 +129,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          file: Dockerfile.prod
+          file: ./Dockerfile.prod
           push: true
           tags: ${{ vars.DOCKERHUB_USERNAME }}/python-crud:latest
 
@@ -142,9 +142,17 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             podman login -u ${{ vars.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }} docker.io
+
+            # Stop and remove existing container if it exists
             podman stop python-crud || true
             podman rm python-crud || true
+
+            # Remove existing image if it exists
             podman rmi ${{ vars.DOCKERHUB_USERNAME }}/python-crud:latest || true
+
+            # Pull new image from Docker Hub
             podman pull ${{ vars.DOCKERHUB_USERNAME }}/python-crud:latest
+
+            # Run new container
             podman run -d --name python-crud --network host ${{ vars.DOCKERHUB_USERNAME }}/python-crud:latest
             echo "Container has been deployed successfully!"
